# timehelm

./: .dockerignore  .flyignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SKILL.md  build.sh  fly.toml  package-lock.json  package.json  vite.config.js  vite.config.ts
.cursor/rules/: game-patterns.md  rust-conventions.md  typescript-conventions.md
.github/workflows/: deploy.yml
.husky/: pre-commit
client/: eslint.config.js  index.html  package-lock.json  package.json  ship.html  vite.config.ts
client/public/: index.html
client/public/ship/: run.js
client/scripts/: inspect-glb.mjs
client/src/: auth-client.js  auth-client.ts  commit_time.txt  game-client.js  game-client.ts  index.ts  main.js  main.ts  ship.ts  vite-env.d.ts
client/src/ai/: RandomMovementController.ts
client/src/camera/: CameraController.ts
client/src/entities/: Entity.ts  Player.ts
client/src/environment/: DayNightCycle.ts
client/src/input/: InputManager.ts
client/src/network/: NetworkManager.ts
client/src/time/: Calendar.ts
client/src/world/: HeightOpacityManager.ts  HouseBuilder.ts  WorldObjectFactory.ts
database/: timehelm_schema.sql
docs/: DB_SETUP.md  DOMAIN_SETUP.md  GITHUB_DEPLOYMENT.md  fly-postgres-setup.md
scripts/: build-ship.sh  write-commit-time.mjs
server/: Cargo.toml
server/migrations/: 001_initial_schema.sql  002_game_state.sql
server/src/: auth.rs  db.rs  game.rs  main.rs  messages.rs  physics.rs  websocket.rs
ship-game/: Cargo.toml
ship-game/src/: lib.rs  shader_embed.rs  ship_hull.rs
ship-game/src/shaders/: ship_clip_forward.wgsl  ship_clip_prepass.wgsl
