[package]
name = "timehelm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["ws"] }
futures-util = "*"
tower = "*"
tower-http = { version = "*", features = ["cors", "fs"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
oauth2 = "*"
reqwest = { version = "*", features = ["json"] }
jsonwebtoken = { version = "*", features = ["rust_crypto"] }
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v4", "v5", "serde"] }
tracing = "*"
tracing-subscriber = "*"
anyhow = "*"
thiserror = "*"
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "migrate"] }
dotenv = "*"
rapier3d = { version = "*", features = ["simd-stable", "serde-serialize"] }
rand = "*"

