[package]
name = "ship-game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_scene",
    "bevy_color",
    "default_font",
    "webgl2",
    "png",
] }
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js"] }
